# Whirlpool

./: .gitignore  CMakeLists.txt  Makefile  README.md
Examples/: CMakeLists.txt  FirstWindow.cpp  Music.cpp
Whirlpool/: Whirlpool.hpp
Whirlpool/Graphics/Color/: Rgba.hpp
Whirlpool/Graphics/SimpleRender2D/: SimpleRender2D.hpp
Whirlpool/Input/: InputHandler.hpp
Whirlpool/Math/FRect/: FRect.hpp
Whirlpool/Math/Point/: Point.hpp
Whirlpool/Math/Vector2/: Vector2.cpp  Vector2.hpp
Whirlpool/Sound/: SimpleSound.hpp
Whirlpool/Window/: SimpleWindow.hpp
